--- a/2015-rust/Cargo.toml
+++ b/2015-rust/Cargo.toml
@@ -9,3 +9,4 @@ nursery = { level = "warn", priority = -1 }
 
 missing_panics_doc = { level = "allow", priority = 1 }
 fallible_impl_from = { level = "allow", priority = 1 }
+unnecessary_wraps = { level = "allow", priority = 1 }
